--- a/package.json
+++ b/package.json
@@ -9,9 +9,12 @@
     "@fortawesome/react-fontawesome": "^0.1.5",
     "bootstrap": "^4.3.1",
     "classnames": "^2.2.6",
+    "node-sass": "^4.12.0",
     "react": "^16.10.1",
     "react-dom": "^16.10.1",
-    "react-scripts": "3.1.2"
+    "react-scripts": "3.1.2",
+    "react-simplemde-editor": "^4.1.0",
+    "uuid": "^3.3.3"
   },
   "scripts": {
     "start": "react-scripts start",
