--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@fortawesome/react-fontawesome": "^0.1.5",
     "bootstrap": "^4.3.1",
     "classnames": "^2.2.6",
+    "electron-store": "^5.0.0",
     "node-sass": "^4.12.0",
     "react": "^16.10.1",
     "react-dom": "^16.10.1",
