Update main menu Add upload cloud

--- a/package.json
+++ b/package.json
@@ -7,10 +7,12 @@
     "@fortawesome/fontawesome-svg-core": "^1.2.25",
     "@fortawesome/free-solid-svg-icons": "^5.11.2",
     "@fortawesome/react-fontawesome": "^0.1.5",
+    "axios": "^0.19.0",
     "bootstrap": "^4.3.1",
     "classnames": "^2.2.6",
     "electron-store": "^5.0.0",
     "node-sass": "^4.12.0",
+    "qiniu": "^7.2.2",
     "react": "^16.10.1",
     "react-dom": "^16.10.1",
     "react-scripts": "3.1.2",
@@ -22,6 +24,7 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
+    "onlyEle": "nodemon --watch main.js --watch src/menuTemplate.js --exec \"electron .\"",
     "dev": "concurrently \"wait-on http://localhost:3000 && electron .\" \"cross-env BROWSER=none npm run start \""
   },
   "eslintConfig": {
@@ -44,6 +47,7 @@
     "cross-env": "^6.0.0",
     "electron": "^6.0.10",
     "electron-is-dev": "^1.1.0",
+    "nodemon": "^1.19.3",
     "wait-on": "^3.3.0"
   }
 }
