--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "cloud-log",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "main": "main.js",
   "description": "Online editor",
   "author": {
@@ -9,24 +9,20 @@
   "repository": "https://github.com/VanGoghChang/react-electron-md-edit",
   "private": true,
   "dependencies": {
-    "axios": "^0.19.0",
-    "bootstrap": "^4.3.1",
-    "electron-is-dev": "^1.1.0",
-    "electron-store": "^4.0.0",
-    "qiniu": "^7.2.2"
+    "electron-store": "^4.0.0"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "buildMain": "webpack",
+    "build-main": "webpack",
     "onlyEle": "nodemon --watch main.js --watch src/menuTemplate.js --exec \"electron .\"",
     "dev": "concurrently \"wait-on http://localhost:3000 && electron .\" \"cross-env BROWSER=none npm run start \"",
     "pack": "electron-builder --dir",
     "dist": "electron-builder",
-    "prepack": "npm run build",
-    "predist": "npm run build"
+    "prepack": "npm run build && npm run build-main",
+    "predist": "npm run build && npm run build-main"
   },
   "homepage": "./",
   "build": {
@@ -44,12 +40,18 @@
       "./src/utils/QiniuManager.js"
     ],
     "extends": null,
+    "directories": {
+      "buildResources": "assets"
+    },
+    "extraMetadata": {
+      "main": "./build/main.js"
+    },
     "mac": {
       "category": "public.app-category.productivity",
       "artifactName": "${productName}-${version}-${arch}.${ext}"
     },
     "dmg": {
-      "background": "assets/appdmg.png",
+      "background": "assets/dmgBackground.png",
       "icon": "assets/icon.icns",
       "iconSize": 100,
       "contents": [
@@ -105,14 +107,18 @@
     "@fortawesome/free-brands-svg-icons": "^5.9.0",
     "@fortawesome/free-solid-svg-icons": "^5.9.0",
     "@fortawesome/react-fontawesome": "^0.1.4",
+    "axios": "^0.19.0",
+    "bootstrap": "^4.3.1",
     "classnames": "^2.2.6",
     "concurrently": "^4.1.1",
     "cross-env": "^5.2.0",
     "electron": "^6.0.12",
     "electron-builder": "^21.2.0",
+    "electron-is-dev": "^1.1.0",
     "electron-store": "^4.0.0",
     "electron-updater": "^4.1.2",
     "node-sass": "^4.12.0",
+    "qiniu": "^7.2.2",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-scripts": "3.0.1",
